<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ItemLieuActivity">


        <android.support.constraint.Guideline
            android:id="@+id/ItemLieuActivity__guideline__left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/ItemLieuActivity__guideline__right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


        <LinearLayout
            android:id="@+id/ItemLieuActivity__item1"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@+id/ItemLieuActivity__guideline__right"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/ItemLieuActivity__guideline__left"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ItemLieuActivity__item1__image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="20dp"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/ItemLieuActivity__guideline__right"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/ItemLieuActivity__guideline__left"
                app:layout_constraintTop_toBottomOf="@+id/button23"
                app:srcCompat="@drawable/cover" />

            <Button
                android:id="@+id/ItemLieuActivity__item1__tag1"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_blue_border"
                android:backgroundTint="@color/home__blue"
                android:text="@string/cat_1"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toBottomOf="@+id/button22"
                app:layout_constraintStart_toEndOf="@+id/button22"
                app:layout_constraintTop_toTopOf="@+id/button22" />

            <Button
                android:id="@+id/ItemLieuActivity__item1__tag2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_blue_border"
                android:backgroundTint="@color/home__blue"
                android:text="@string/cat_1"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintStart_toStartOf="@+id/ItemLieuActivity__guideline__left"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/ItemLieuActivity__item1__title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/critere__item__title"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/test_title"
                app:layout_constraintStart_toStartOf="@+id/ItemLieuActivity__guideline__left"
                app:layout_constraintTop_toBottomOf="@+id/imageView1" />

            <TextView
                android:id="@+id/ItemLieuActivity__item1__description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="@dimen/default_gap"
                android:text="@string/critere__item__description"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="@dimen/text_p"
                app:layout_constraintEnd_toStartOf="@+id/ItemLieuActivity__guideline__right"
                app:layout_constraintStart_toStartOf="@+id/ItemLieuActivity__guideline__left"
                app:layout_constraintTop_toBottomOf="@+id/button21" />

            <Button
                android:id="@+id/ItemLieuActivity__item1__discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_blue_border"
                android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
                android:text="@string/home__welcome"
                app:layout_constraintEnd_toStartOf="@+id/ItemLieuActivity__guideline__right"
                app:layout_constraintStart_toStartOf="@+id/ItemLieuActivity__guideline__left"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>